# mxgic1337

./: .gitignore  .prettierignore  CODEOWNERS  Cargo.toml  LICENSE  Makefile  README.md  catppuccin.tera  index.html  package.json  pnpm-lock.yaml  projects.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-deploy.yml  build-test.yml  ci.yml
public/: projects.json  script.js
scripts/: generate_readme.ts  languages.json  links.json  readme_template.md
src/: App.tsx  github.rs  main.rs  main.tsx  structs.rs
src/components/: IconLink.tsx  Language.tsx  Project.tsx  SectionTitle.tsx
src/css/: app.less
src/css/flavors/: frappe.less  latte.less  macchiato.less  mocha.less
src/github/: mod.rs  structs.rs
src/utils/: language_icons.ts  language_icons.tsx
styles/: app.less  fonts.less
styles/flavors/: dark.less  dark_red.less  frappe.less  latte.less  macchiato.less  mocha.less
templates/: base.html  index.html  projects.html
templates/components/: footer.html  header.html  languages.html  profile.html  projects.html  sponsors.html  unpinned_projects.html
vite/src/: App.tsx
vite/src/components/: IconLink.tsx  Language.tsx  Project.tsx  SectionTitle.tsx  Sponsors.tsx
vite/src/css/: app.less
vite/src/css/flavors/: frappe.less  latte.less  macchiato.less  mocha.less
vite/src/utils/: language_icons.tsx
