[package]
name = "mxgic1337"
version = "2.0.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tera = "1.20.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["fs", "trace"] }
